--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,10 @@ post_class: post-template
 
 <header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
-        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
-        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
+        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">主页</a>
+        {% if site.abouturl!='' %}
+                <a class="about-button icon-meh-o" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
+        {% endif %}
     </nav>
 </header>
 
