--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -160,7 +160,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 .icon-link:before {
     content: "\f608";
 }
-
+.icon-meh-o:before {
+    content: "\f11a";
+}
 
 /* ==========================================================================
    2. General - Setting up some base styles
@@ -593,7 +595,7 @@ margin on the iframe, cause it breaks stuff. */
     margin-right: 8px;
 }
 
-.subscribe-button {
+.about-button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -612,7 +614,7 @@ margin on the iframe, cause it breaks stuff. */
     background: rgba(0,0,0,0.1);
     transition: all ease 0.3s;
 }
-.subscribe-button:before {
+.about-button:before {
     font-size: 9px;
     margin-right: 6px;
 }
@@ -632,7 +634,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 .no-cover .main-nav.overlay,
 .no-cover .back-button,
-.no-cover .subscribe-button {
+.no-cover .about-button {
     background: none;
 }
 
@@ -641,7 +643,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .main-nav.overlay .back-button,
-.main-nav.overlay .subscribe-button {
+.main-nav.overlay .about-button {
     border-color: rgba(255,255,255,0.6);
 }
 
@@ -654,7 +656,7 @@ margin on the iframe, cause it breaks stuff. */
 
 /* Add a border to the buttons on hover */
 .back-button:hover,
-.subscribe-button:hover {
+.about-button:hover {
     border-color: #bfc8cd;
     color: #9EABB3;
 }
@@ -662,21 +664,21 @@ margin on the iframe, cause it breaks stuff. */
 /* The details of your blog. Defined in ghost/settings/ */
 .page-title {
     margin: 10px 0 10px 0;
-    font-size: 5rem;
+    font-size: 3rem;
     letter-spacing: -1px;
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
-    color: #fff;
+    color: rgba(0,0,0,0.8);
 }
 
 .page-description {
     margin: 0;
-    font-size: 2rem;
+    font-size: 1.6rem;
     line-height: 1.5em;
     font-weight: 400;
     font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
-    color: rgba(255,255,255,0.8);
+    color: rgba(0,0,0,0.8);
 }
 
 .no-cover.main-header {
@@ -694,7 +696,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .no-cover .main-nav.overlay .back-button,
-.no-cover .main-nav.overlay .subscribe-button {
+.no-cover .main-nav.overlay .about-button {
     color: rgba(0,0,0,0.4);
     border-color: rgba(0,0,0,0.3);
 }
@@ -766,7 +768,7 @@ body:not(.post-template) .post-title {
     display: block;
     margin: 1.75rem 0 0 0;
     font-family: "Open Sans", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 2.2rem;
     color: #9EABB3;
 }
@@ -796,9 +798,8 @@ body:not(.post-template) .post-title {
 
 .post-date {
     display: inline-block;
-    margin-left: 8px;
-    padding-left: 12px;
-    border-left: #d5dbde 1px solid;
+    margin-right: 8px;
+    padding-right: 12px;
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
@@ -1486,7 +1487,7 @@ body:not(.post-template) .post-title {
     }
 
     .back-button,
-    .subscribe-button {
+    .about-button {
         height: 44px;
         line-height: 41px;
         border-radius: 0;
@@ -1494,7 +1495,7 @@ body:not(.post-template) .post-title {
         background: transparent;
     }
     .back-button:hover,
-    .subscribe-button:hover {
+    .about-button:hover {
         border-color: #ebeef0;
         color: #2e2e2e;
         background: #ebeef0;
@@ -1504,7 +1505,7 @@ body:not(.post-template) .post-title {
         padding: 0 15px 0 10px;
     }
 
-    .subscribe-button {
+    .about-button {
         padding: 0 12px;
     }
 
@@ -1518,12 +1519,12 @@ body:not(.post-template) .post-title {
         background: none;
     }
     .no-cover .main-nav.overlay .back-button,
-    .no-cover .main-nav.overlay .subscribe-button {
+    .no-cover .main-nav.overlay .about-button {
         border: none;
     }
 
     .main-nav.overlay .back-button,
-    .main-nav.overlay .subscribe-button {
+    .main-nav.overlay .about-button {
         border-color: transparent;
     }
 
