Update theme style.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,9 +4,9 @@ post_class: post-template page-template
 ---
 
 <nav class="main-nav clearfix">
-    <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">主页</a>
+    <a class="back-button icon-arrow-left2" href="{{ site.baseurl }}">主页</a>
     {% if site.abouturl!='' %}
-        <a class="about-button icon-meh-blank" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
+        <a class="about-button icon-cool" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
     {% endif %}
 </nav>
 
