--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@ post_class: post-template
 
 <header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
-        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">主页</a>
+        <a class="back-button icon-arrow-left2" href="{{ site.baseurl }}">主页</a>
         {% if site.abouturl!='' %}
-                <a class="about-button icon-meh-o" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
+                <a class="about-button icon-cool" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
         {% endif %}
     </nav>
 </header>
@@ -21,10 +21,13 @@ post_class: post-template
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
             <section class="post-meta">
-                <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
-                {% if page.categories.size > 0 %}
-                    {{ page.categories | array_to_sentence_string | prepend: 'on ' }}
-                {% endif %}
+                <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date: "%Y-%m-%d" }}</time>
+				<span class="post-categories">
+				{% for category in page.categories %}
+				<a href="{{ site.baseurl }}categories/#{{ category|slugize }}">{{category}}</a>
+				{% unless forloop.last %}&nbsp;{% endunless %}
+				{% endfor %}
+				</span>
             </section>
         </header>
 
