--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,12 +22,9 @@ post_class: post-template
             <h1 class="post-title">{{ page.title }}</h1>
             <section class="post-meta">
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date: "%Y-%m-%d" }}</time>
-				<span class="post-categories">
-				{% for category in page.categories %}
-				<a href="{{ site.baseurl }}categories/#{{ category|slugize }}">{{category}}</a>
-				{% unless forloop.last %}&nbsp;{% endunless %}
-				{% endfor %}
-				</span>
+            	{% if page.categories.size > 0 %}
+                	{{ page.categories | array_to_sentence_string: "、" | prepend: '' }}
+            	{% endif %}
             </section>
         </header>
 
