--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@ post_class: post-template
 
 <header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
-        <a class="back-button icon-arrow-left2" href="{{ site.baseurl }}">主页</a>
+        <a class="back-button icon-arrow-left2" href="{{ site.baseurl | relative_url }}">主页</a>
         {% if site.abouturl!='' %}
-                <a class="about-button icon-cool" href='{{ site.baseurl }}{{ site.abouturl }}'>关于我</a>
+                <a class="about-button icon-cool" href='{{ site.baseurl | relative_url }}{{ site.abouturl }}'>关于我</a>
         {% endif %}
     </nav>
 </header>
