--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ post_class: post-template
             <section class="post-meta">
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date: "%Y-%m-%d" }}</time>
             	{% if page.categories.size > 0 %}
-                	{{ page.categories | array_to_sentence_string: "、" | prepend: '' }}
+                	{{ page.categories | join: "、" }}
             	{% endif %}
             </section>
         </header>
