--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -33,7 +33,7 @@ audio, canvas, video { display: inline-block; }
 audio:not([controls]) { display: none; height: 0; }
 [hidden], template { display: none; }
 html {
-   font-family: sans-serif;
+   font-family: Helvetica,Arial,Microsoft Yahei,微软雅黑,STXihei,华文细黑,sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
 }
@@ -170,7 +170,6 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -196,7 +195,6 @@ h4, h5, h6 {
     color: #2E2E2E;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
-    font-family: "Open Sans", sans-serif;
 }
 
 h1 {
@@ -487,7 +485,6 @@ margin on the iframe, cause it breaks stuff. */
 
 .main-nav a {
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
 }
 
 /* Create a bouncing scroll-down arrow on homepage with cover image */
@@ -659,7 +656,6 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 3rem;
     letter-spacing: -1px;
     font-weight: 700;
-    font-family: "Open Sans", sans-serif;
     color: rgba(0,0,0,0.8);
 }
 
@@ -668,7 +664,6 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 1.6rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     color: rgba(0,0,0,0.8);
 }
@@ -772,7 +767,6 @@ body:not(.post-template) .post-title {
 .post-meta {
     display: block;
     margin: 1.75rem 0 0 0;
-    font-family: "Open Sans", sans-serif;
     font-size: 1.3rem;
     line-height: 2.2rem;
     color: #9EABB3;
@@ -959,22 +953,28 @@ body:not(.post-template) .post-title {
    Doing it like this means it's easier for the author bio
    to be flexible at smaller screen sizes while the share
    links remain at a fixed width the whole time */
-.post-footer .share {
+.post-footer .declare {
     position: absolute;
-    top: 6rem;
+    top: 5rem;
     right: 0;
-    width: 140px;
+    width: 180px;
 }
 
-.post-footer .share a {
-    font-size: 1.8rem;
-    display: inline-block;
+.post-footer .declare h5,
+.post-footer .declare span {
+	font-size:1.2rem;
+    color: #BBC7CC;
+	display: inline-block;
+}
+
+.post-footer .declare a {
+    display: inline;
     margin: 1rem 1.6rem 1.6rem 0;
     color: #BBC7CC;
     text-decoration: none;
 }
 
-.post-footer .share a:hover {
+.post-footer .declare a:hover {
     color: #50585D;
 }
 
@@ -1170,7 +1170,6 @@ body:not(.post-template) .post-title {
 /* Location, website, and link */
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem;
 }
@@ -1214,7 +1213,6 @@ body:not(.post-template) .post-title {
     width: 80%;
     max-width: 710px;
     margin: 4rem auto;
-    font-family: "Open Sans", sans-serif;
     font-size: 1.3rem;
     color: #9EABB3;
     text-align: center;
@@ -1301,7 +1299,6 @@ body:not(.post-template) .post-title {
     margin: 8rem 0 0 0;
     padding: 0.5rem 15px;
     border-top: #EBF2F6 1px solid;
-    font-family: "Open Sans", sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
     color: #BBC7CC;
@@ -1653,12 +1650,12 @@ body:not(.post-template) .post-title {
         border-bottom: #EBF2F6 1px dashed;
     }
 
-    .post-footer .share {
+    .post-footer .declare {
         position: static;
         width: auto;
     }
 
-    .post-footer .share a {
+    .post-footer .declare a {
         margin: 1.4rem 0.8rem 0 0.8rem;
     }
 
