--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,9 +76,8 @@ post_class: post-template
                     <p>上能PPT，下能搬砖。</p>
                 </section>
             {% endif %}
-
 			<section class="declare">
-				<span>保持署名，可自由转载。参见<a target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">创意共享3.0许可证;</a></span><span>部分图片来源网络，侵权可<a target="_blank" href="mailto:vigorpro@gmail.com">联系删除。</a></span>
+			<span>保持署名，可自由转载，参见<a target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">创意共享3.0许可证;</a></span><span>部分图片来源网络，侵权<a target="_blank" href="mailto:vigorpro@gmail.com">可联系删除。</a></span>
 			</section>
 			
             <!-- Disqus comments -->
