--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -221,6 +221,7 @@ html, body {
 	font-family: "PT Serif", 'Times New Roman', Times, serif;
 	color: #1f0909;
 	line-height: 1.5em;
+	background-color: #fafafa;
 }
 
 body {
