--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -395,7 +395,7 @@ td {
 
 code,
 .md-fences {
-	background-color: #dadada;
+	/*background-color: #dadada;*/
 }
 
 code {
@@ -1537,7 +1537,6 @@ body:not(.post-template) .post-title {
     max-width: 710px;
     margin: 4rem auto;
     font-family: "Open Sans", sans-serif;
-    font-size: 1.3rem;
     color: #9EABB3;
     text-align: center;
 }
@@ -1546,13 +1545,16 @@ body:not(.post-template) .post-title {
     color: #9EABB3;
     transition: all 0.2s ease;
 }
+.pagination a:hover {
+	text-decoration:none;
+}
 
 /* Push the previous/next links out to the left/right */
 .older-posts,
 .newer-posts {
     position: absolute;
     display: inline-block;
-    padding: 0 15px;
+    padding: 4px 15px;
     border: #bfc8cd 1px solid;
     text-decoration: none;
     border-radius: 4px;
