--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -307,7 +307,7 @@ h3 {
 	/*21 / 16*/
 	line-height: 1.15;
 	/*24 / 21*/
-	margin-top: 2.285714em;
+	margin-top: 1.285714em;
 	/*48 / 21*/
 	margin-bottom: 1.15em;
 	/*24 / 21*/
@@ -453,7 +453,9 @@ li ol>li {
 li li ol>li{
 	list-style-type: lower-roman;
 }
-
+h2 {
+	font-weight:normal;
+}
 h2,
 h3 {
 	margin-bottom: .75em;
@@ -632,7 +634,7 @@ hr {
 }
 
 header, .context-menu, .megamenu-content, footer {
-	font-family: "PT Serif", 'Times New Roman', Times, serif;
+    font-family: 'Open Sans', sans-serif;
     color: #1f0909;
 }
 
@@ -800,7 +802,7 @@ a:hover {
     display: table;
     width: 100%;
     height: 100%;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     text-align: center;
     background: #222 no-repeat center center;
     background-size: cover;
@@ -1042,8 +1044,8 @@ a:hover {
     position: relative;
     width: 80%;
     max-width: 710px;
-    margin: 4rem auto;
-    padding-bottom: 4rem;
+    margin: 1rem auto;
+    padding-bottom: 2rem;
     border-bottom: #EBF2F6 1px solid;
     word-break: break-word;
     hyphens: auto;
@@ -1069,7 +1071,7 @@ a:hover {
 }
 
 body:not(.post-template) .post-title {
-    font-size: 3rem;
+    font-size: 2.4rem;
 }
 
 .post-title a {
@@ -1078,7 +1080,7 @@ body:not(.post-template) .post-title {
 
 .post-excerpt p {
     margin: 0;
-    font-size: 0.9em;
+    font-size: 1em;
     line-height: 1.7em;
 }
 
@@ -1088,7 +1090,7 @@ body:not(.post-template) .post-title {
 
 .post-meta {
     display: block;
-    margin: 1.75rem 0 0 0;
+    margin-top: 1rem;
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
     color: #9EABB3;
@@ -1492,9 +1494,9 @@ body:not(.post-template) .post-title {
 /* Location, website, and link */
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem;
+    font-family: "Open Sans", sans-serif;	
 }
 .author-meta span {
     display: inline-block;
@@ -1706,7 +1708,7 @@ body:not(.post-template) .post-title {
     }
 
     body:not(.post-template) .post-title {
-        font-size: 3.2rem;
+        font-size: 2.4rem;
     }
 
     hr {
@@ -1882,7 +1884,7 @@ body:not(.post-template) .post-title {
     }
 
     .post-excerpt p {
-        font-size: 0.85em;
+        font-size: 1em;
     }
 
     .page-description {
@@ -1895,7 +1897,7 @@ body:not(.post-template) .post-title {
     }
 
     body:not(.post-template) .post-title {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .post-template .post {
