--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,7 +73,7 @@ post_class: post-template
                     <!-- Author Name -->
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
-                    <p>数据科学产品经理</p>
+                    <p>专注数据科学和产品设计</p>
                 </section>
             {% endif %}
 			<section class="declare">
